[package]
name = "zhersh_json_parser"
version = "0.1.0"
edition = "2021"
description = "A CLI JSON parser with customizable error handling and a rule-based parsing system"
license = "MIT"
repository = "https://github.com/Tutt1Frutty/json_parser_upd.git"
documentation = "https://docs.rs/zhersh_json_parser"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.3"
anyhow = "1.0.93"
pest = "2.7.14"
pest_derive = "2.7.14"
